fixed card overflow in style.css

--- a/styles/style.css
+++ b/styles/style.css
@@ -161,8 +161,7 @@ textarea {
 .task__title,
 .task__description {
   overflow-wrap: break-word;
-  word-wrap: break-word;
-  word-break: break-word;
+  word-break: break-all;
 }
 
 .task__description {
